--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -125,7 +125,8 @@ login.oauth.google=Accedi con Google
 login.oauth.facebook=Accedi con Facebook
 login.js.error=Login fallito, controllare i dati di accesso, compilare il captcha e riprovare. Una nuova email di conferma è stata inviata se il tuo account non è ancora stato verificato.
 message.title=Notizie
-message.match=Un match! Qualcuno ti vuole bene! Digitare qui per inviare un messaggio :)
+message.match=È stata richiesta una video chat dal tuo partner di chat!
+message.video-chat=A video chat has been requested from your chat partner!
 message.js.error.max-length=Numero massimo di caratteri raggiunto.
 message.js.video.confirm=Invitare un partner di chat in video chat?
 
