--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -126,6 +126,7 @@ login.oauth.facebook=Войти в систему с помощью Facebook
 login.js.error=Вход не удался, пожалуйста, проверьте данные для входа, заполните капчу и попробуйте еще раз. Если ваш аккаунт еще не был подтвержден, было отправлено новое подтверждение по электронной почте.
 message.title=Новости
 message.match=Матч! Ты кому-то нравишься! Введите здесь, чтобы отправить сообщение :)
+message.video-chat=Видеочат запрошен у вашего чата-партнера!
 message.js.error.max-length=Максимальное количество достигнутых символов.
 message.js.video.confirm=Пригласить в чат партнера по видеочату?
 
