--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -126,6 +126,7 @@ login.oauth.facebook=Iniciar sessão com o Facebook
 login.js.error=O login falhou, por favor verifique os dados de login, preencha o captcha e tente novamente. Foi enviado um novo e-mail de confirmação se a sua conta ainda não tiver sido verificada.
 message.title=Notícias
 message.match=Um match! Alguém gosta de ti de volta! Escreva aqui para enviar uma mensagem :)
+message.video-chat=Foi pedido um chat vídeo ao seu parceiro de chat!
 message.js.error.max-length=Número máximo de caracteres atingido.
 message.js.video.confirm=Convidar um parceiro de chat para um chat vídeo?
 
