UI improvements for donate

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -64,7 +64,7 @@ profile=Profil
 reports=Berichte
 
 search=Suchen
-sign-up=Anmelden
+sign-up=Registrieren
 source-code=Quellcode
 sort=Sortieren
 submit=Senden
@@ -109,7 +109,7 @@ index.technology.title=Neueste Technologien
 index.technology.description=Wir verwenden die neuesten Technologien, damit du von den neuesten Web-Technologien profitieren kannst. Du kannst diese Seite zum Beispiel als <a href="https://wikipedia.org/wiki/Progressive_web_application">Progressive Webanwendung</a> direkt von deinem Browser aus installieren!
 index.for-you.title=Für dich gebaut
 index.for-you.description=Mit modernen Filtern zeigen wir dir nur die Personen an, die deine Kriterien entsprechen. Auf diese Weise verbringst du weniger Zeit mit der Suche und hast mehr Zeit, neue Leute zu finden und kennen zu lernen.
-index.sign-up-now=Jetzt anmelden!
+index.sign-up-now=Jetzt registrieren!!
 index.js.confirm-registration=Eine Bestätigungs-E-Mail wurde an deine E-Mail-Adresse geschickt.
 index.js.registration-confirm-success=Die Bestätigung war erfolgreich, du kannst dich jetzt einloggen und neue Leute in Ihrer Gegend kennenlernen!
 index.js.registration-confirm-failed=Bestätigung fehlgeschlagen, bitte versuche es erneut!
