Added translation for donation popup

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -176,6 +176,7 @@ search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
 search.sort.filter.interests=Interests
 search.sort.filter.donations=Donations
+search.donation.popup=Do you want to donate? Each cent will help us reach out new users and add new features to improve the overall experience!
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 
 userprofile.report.confirm=Report user for violating the <a href="/tos">Terms of Service</a>?
