--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=Kleinster Abstand
 search.sort.filter.active=Zuletzt aktiv
 search.sort.filter.interests=Interessen
 search.sort.filter.donations=Spenden
+search.donation.popup=Möchtest du spenden? Jeder Cent hilft uns, neue Benutzer zu erreichen und neue Funktionen hinzuzufügen, um dein Erlebnis zu verbessern!
 search.js.error.no-geolocation=Dein Browser unterstützt keine HTML5-Geolokalisierung. Bitte versuche es mit einem anderen Browser.
 
 userprofile.report.confirm=Nutzer wegen Verstoßes gegen die <a href="/tos">Nutzungsbedingungen</a> melden?
