--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=La distancia más pequeña
 search.sort.filter.active=El último activo
 search.sort.filter.interests=Intereses
 search.sort.filter.donations=Donaciones
+search.donation.popup=¿Quiere donar? Cada céntimo nos ayuda a llegar a nuevos usuarios y a añadir nuevas funciones para mejorar tu experiencia.
 search.js.error.no-geolocation=Su navegador no soporta la geolocalización HTML5. Por favor, intente con otro navegador.
 
 userprofile.report.confirm=¿Informar a los usuarios de la violación de los <a href="/tos">Términos de Uso</a>?
