--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=最短距離
 search.sort.filter.active=最後のアクティブ
 search.sort.filter.interests=関心事
 search.sort.filter.donations=寄付金
+search.donation.popup=寄付をしたいですか？すべてのセントは、私たちが新しいユーザーに到達し、あなたの経験を向上させるための新機能を追加するのに役立ちます。
 search.js.error.no-geolocation=お使いのブラウザはHTML5ジオロケーションをサポートしていません。別のブラウザをお試しください。
 
 userprofile.report.confirm=<a href="/tos">利用規約</a>に違反しているユーザーを報告しますか？
