--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=Menor distância
 search.sort.filter.active=Último activo
 search.sort.filter.interests=Interesses
 search.sort.filter.donations=Doações
+search.donation.popup=Quer doar? Cada cêntimo ajuda-nos a chegar a novos utilizadores e a acrescentar novas funcionalidades para melhorar a sua experiência!
 search.js.error.no-geolocation=O seu navegador não suporta a geolocalização HTML5. Por favor, tente outro navegador.
 
 userprofile.report.confirm=Reportar utilizadores por violação do <a href="/tos">Termos de Utilização</a>?
