--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=Наикратчайшее расстояние
 search.sort.filter.active=Последний активный
 search.sort.filter.interests=Интересы
 search.sort.filter.donations=Пожертвования
+search.donation.popup=Хочешь пожертвовать? Каждый цент помогает нам охватить новых пользователей и добавить новые функции для улучшения вашего опыта!
 search.js.error.no-geolocation=Ваш браузер не поддерживает геолокацию HTML5. Пожалуйста, попробуйте другой браузер.
 
 userprofile.report.confirm=Сообщать пользователям о нарушении <a href="/tos">Условия использования</a>?
