--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -175,6 +175,7 @@ search.sort.filter.distance=La plus petite distance
 search.sort.filter.active=Dernière activité
 search.sort.filter.interests=Intérêts
 search.sort.filter.donations=Dons
+search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
 
 userprofile.report.confirm=Signaler les utilisateurs pour violation des <a href="/tos">conditions d'utilisation</a> ?
