Update privacy policy and TOS in English and German

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=Intereses
 search.sort.filter.donations=Donaciones
 search.donation.popup=¿Quiere donar? Cada céntimo nos ayuda a llegar a nuevos usuarios y a añadir nuevas funciones para mejorar tu experiencia.
 search.js.error.no-geolocation=Su navegador no soporta la geolocalización HTML5. Por favor, intente con otro navegador.
+search.js.error.no-location=No se ha podido determinar la posición. Asegúrate de que tu GPS está encendido.
 
 userprofile.report.confirm=¿Informar a los usuarios de la violación de los <a href="/tos">Términos de Uso</a>?
 userprofile.num-blocks=# Bloqueado por los usuarios
