--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=Intérêts
 search.sort.filter.donations=Dons
 search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
+search.js.error.no-location=La position n'a pas pu être déterminée. Assurez-vous que votre GPS est allumé.
 
 userprofile.report.confirm=Signaler les utilisateurs pour violation des <a href="/tos">conditions d'utilisation</a> ?
 userprofile.num-blocks=# Blocs par utilisateur
