--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=Interesses
 search.sort.filter.donations=Doações
 search.donation.popup=Quer doar? Cada cêntimo ajuda-nos a chegar a novos utilizadores e a acrescentar novas funcionalidades para melhorar a sua experiência!
 search.js.error.no-geolocation=O seu navegador não suporta a geolocalização HTML5. Por favor, tente outro navegador.
+search.js.error.no-location=A posição não pôde ser determinada. Assegure-se de que o seu GPS está ligado.
 
 userprofile.report.confirm=Reportar utilizadores por violação do <a href="/tos">Termos de Utilização</a>?
 userprofile.num-blocks=# Bloqueio pelos utilizadores
