--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=Интересы
 search.sort.filter.donations=Пожертвования
 search.donation.popup=Хочешь пожертвовать? Каждый цент помогает нам охватить новых пользователей и добавить новые функции для улучшения вашего опыта!
 search.js.error.no-geolocation=Ваш браузер не поддерживает геолокацию HTML5. Пожалуйста, попробуйте другой браузер.
+search.js.error.no-location=Позиция не может быть определена. Убедитесь, что ваш GPS включен.
 
 userprofile.report.confirm=Сообщать пользователям о нарушении <a href="/tos">Условия использования</a>?
 userprofile.num-blocks=# Блокировка пользователями
