--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=Interessi
 search.sort.filter.donations=Donazioni
 search.donation.popup=Vuoi donare? Ogni centesimo ci aiuta a raggiungere nuovi utenti e ad aggiungere nuove funzionalità per migliorare la tua esperienza!
 search.js.error.no-geolocation=Il tuo browser non supporta la geolocalizzazione HTML5. Si prega di provare un altro browser.
+search.js.error.no-location=Non è stato possibile determinare la posizione. Si assicuri che il suo GPS sia acceso.
 
 userprofile.report.confirm=Segnalare gli utenti per violazione dei <a href="/tos">Termini d'uso</a>?
 userprofile.num-blocks=# Blocco da parte degli utenti
