--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=関心事
 search.sort.filter.donations=寄付金
 search.donation.popup=寄付をしたいですか？すべてのセントは、私たちが新しいユーザーに到達し、あなたの経験を向上させるための新機能を追加するのに役立ちます。
 search.js.error.no-geolocation=お使いのブラウザはHTML5ジオロケーションをサポートしていません。別のブラウザをお試しください。
+search.js.error.no-location=ポジションは決定できませんでした。GPSがオンになっていることを確認してください。
 
 userprofile.report.confirm=<a href="/tos">利用規約</a>に違反しているユーザーを報告しますか？
 userprofile.num-blocks=# ユーザーによるブロッキング
