--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -176,6 +176,7 @@ search.sort.filter.interests=이해
 search.sort.filter.donations=기부하다
 search.donation.popup=기부 하시겠습니까? 모든 페니는 새로운 사용자에게 다가 가고 새로운 기능을 추가하여 사용자 경험을 개선하는 데 도움이됩니다!
 search.js.error.no-geolocation=브라우저가 HTML5 위치 정보를 지원하지 않습니다. 다른 브라우저를 사용해보십시오.
+search.js.error.no-location=위치를 결정할 수 없습니다. GPS가 켜져 있는지 확인하십시오.
 
 userprofile.report.confirm=<a href="/tos"> 이용 약관 </a> 위반에 대해 사용자를 신고 하시겠습니까?
 userprofile.num-blocks=# 사용자 별 차단
