--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -177,6 +177,7 @@ search.sort.filter.interests=兴趣爱好
 search.sort.filter.donations=捐赠
 search.donation.popup=要不要捐款？每一分钱都能帮助我们接触到新的用户，并增加新的功能来改善您的体验!
 search.js.error.no-geolocation=您的浏览器不支持HTML5地理定位。请尝试其他浏览器。
+search.js.error.no-location=职位无法确定。确保你的GPS已经打开。
 
 userprofile.report.confirm=举报用户违反<a href="/tos">使用条款</a>?
 userprofile.num-blocks=# 被用户屏蔽
