New: Optimize all page for very small screens, KaiOS ready Added links for /login and /register, respectively Added BTC donation option

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -72,8 +72,6 @@ subject=Betreff
 
 tos=Nutzungsbedingungen
 
-view-profile=Profil ansehen
-
 # TEMPLATE #
 
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
@@ -122,6 +120,7 @@ login.subtitle=Bitte logge dich ein, um fortzufahren.
 login.forgot-password=Passwort vergessen?
 login.oauth.google=Anmelden mit Google
 login.oauth.facebook=Anmelden mit Facebook
+login.register=Noch kein Konto?
 login.js.error=Anmeldung fehlgeschlagen, bitte überprüfe die Anmeldedaten, fülle das Captcha aus und versuche es erneut. Eine neue Bestätigungs-E-Mail wurde versendet, falls dein Konto noch nicht verifiziert wurde.
 message.title=Nachrichten
 message.match=Ein Match! Jemand mag dich zurück! Tippe hier, um eine Nachricht zu senden :)
@@ -166,6 +165,7 @@ register.title=Registrieren
 register.tos-agree=Ich stimme den <a href="/tos">Nutzungsbedingungen</a> zu
 register.privacy-agree=Ich stimme der <a href="/privacy">Datenschutzerklärung</a> zu
 register.asterisk-warning=Felder mit einem Sternchen (*) können in Zukunft nicht mehr geändert werden.
+register.login=Du hast bereits ein Konto?
 register.oauth.google=Registrieren mit Google
 register.oauth.facebook=Registrieren mit Facebook
 
