--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -72,8 +72,6 @@ subject=Sujet
 
 tos=Conditions d'utilisation
 
-view-profile=Voir le profil
-
 # TEMPLATE #
 
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
@@ -122,6 +120,7 @@ login.subtitle=Veuillez vous connecter pour continuer.
 login.forgot-password=Vous avez oublié votre mot de passe?
 login.oauth.google=Connectez-vous avec Google
 login.oauth.facebook=Connectez-vous avec Facebook
+login.register=Vous n'avez pas de compte ?
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
 message.match=Un match! Quelqu'un vous aime en retour ! Tapez ici pour envoyer un message :)
@@ -166,6 +165,7 @@ register.title=S'inscrire
 register.tos-agree=J'accepte les <a href="/tos">conditions d'utilisation</a>
 register.privacy-agree=Ich acceptent la <a href="/privacy">déclaration sur la protection des données</a>.
 register.asterisk-warning=Les champs marqués d'un astérisque (*) ne peuvent pas être modifiés à l'avenir.
+register.login=Vous avez déjà un compte?
 register.oauth.google=S'inscrire sur Google
 register.oauth.facebook=S'inscrire sur Facebook
 
