--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -72,8 +72,6 @@ subject=Oggetto
 
 tos=Condizioni di utilizzo
 
-view-profile=Visualizza il profilo
-
 # TEMPLATE #
 
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
@@ -122,6 +120,7 @@ login.subtitle=Effettuare il login per continuare.
 login.forgot-password=Hai dimenticato la tua password?
 login.oauth.google=Accedi con Google
 login.oauth.facebook=Accedi con Facebook
+login.register=Non hai un account?
 login.js.error=Login fallito, controllare i dati di accesso, compilare il captcha e riprovare. Una nuova email di conferma è stata inviata se il tuo account non è ancora stato verificato.
 message.title=Notizie
 message.match=È stata richiesta una video chat dal tuo partner di chat!
@@ -166,6 +165,7 @@ register.title=Registrati
 register.tos-agree=Accetto i <a href="/tos">Termini di utilizzo</a>
 register.privacy-agree=Accetto <a href="/privacy">l'informativa sulla privacy</a>
 register.asterisk-warning=I campi contrassegnati da un asterisco (*) non possono essere modificati in futuro.
+register.login=Hai già un account?
 register.oauth.google=Registrati con Google
 register.oauth.facebook=Registrati con Facebook
 
