--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -72,8 +72,6 @@ subject=対象者
 
 tos=ご利用条件
 
-view-profile=プロフィールを見る
-
 # TEMPLATE #
 
 profile.warning.incomplete=あなたのユーザープロフィールは不完全であり、他のユーザーからは見ることができません。
@@ -122,6 +120,7 @@ login.subtitle=続けるにはログインしてください。
 login.forgot-password=パスワードをお忘れですか？
 login.oauth.google=Googleでログイン
 login.oauth.facebook=Facebookでログイン
+login.register=アカウントをお持ちでない方
 login.js.error=ログインに失敗しました、ログインデータをご確認の上、キャプチャをご記入の上、再度お試しください。アカウントがまだ確認されていない場合は、新しい確認メールが送信されています。
 message.title=ニュース
 message.match=マッチ！好きな人が戻ってきた！メッセージを送信するにはここを入力してください :)
@@ -166,6 +165,7 @@ register.title=登録
 register.tos-agree=私は<a href="/tos">利用規約</a>に同意します。
 register.privacy-agree=私は、<a href="/privacy">データ保護宣言</a>に同意します。
 register.asterisk-warning=アスタリスク(*)が付いている項目は、将来的に変更できません。
+register.login=すでにアカウントをお持ちですか？
 register.oauth.google=Googleに登録する
 register.oauth.facebook=Facebookに登録する
 
