--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -72,8 +72,6 @@ subject=제목
 
 tos=이용 약관
 
-view-profile=프로필보기
-
 # TEMPLATE #
 
 profile.warning.incomplete=사용자 프로필이 불완전하며 다른 사용자가 볼 수 없습니다.
@@ -121,6 +119,7 @@ login.subtitle=계속하려면 로그인하십시오.
 login.forgot-password=비밀번호를 잊으 셨나요?
 login.oauth.google=Google로 로그인
 login.oauth.facebook=Facebook으로 로그인
+login.register=계정이 없으십니까?
 login.js.error=로그인에 실패했습니다. 로그인 세부 정보를 확인하고 보안 문자를 입력 한 후 다시 시도하십시오. 계정이 아직 확인되지 않은 경우 새 확인 이메일이 전송되었습니다.
 message.title=뉴스
 message.match=경기! 누군가 당신을 좋아합니다! 메시지를 보내려면 여기를 누르세요 :)
@@ -165,6 +164,7 @@ register.title=등록하다
 register.tos-agree=<a href="/tos"> 이용 약관 </a>에 동의합니다.
 register.privacy-agree=<a href="/privacy"> 개인 정보 보호 정책 </a>에 동의합니다.
 register.asterisk-warning=별표 (*)가있는 필드는 나중에 변경할 수 없습니다.
+register.login=이미 계정이 있습니까?
 register.oauth.google=Google에 등록
 register.oauth.facebook=Facebook에 등록
 
