--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -72,8 +72,6 @@ subject=Assunto
 
 tos=Termos de utilização
 
-view-profile=Ver perfil
-
 # TEMPLATE #
 
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
@@ -122,6 +120,7 @@ login.subtitle=Por favor, inicie sessão para continuar.
 login.forgot-password=Esqueceu-se da sua palavra-passe?
 login.oauth.google=Iniciar sessão com o Google
 login.oauth.facebook=Iniciar sessão com o Facebook
+login.register=Não tem uma conta?
 login.js.error=O login falhou, por favor verifique os dados de login, preencha o captcha e tente novamente. Foi enviado um novo e-mail de confirmação se a sua conta ainda não tiver sido verificada.
 message.title=Notícias
 message.match=Um match! Alguém gosta de ti de volta! Escreva aqui para enviar uma mensagem :)
@@ -166,6 +165,7 @@ register.title=Registar
 register.tos-agree=Concordo com os <a href="/tos">Termos de utilização</a>
 register.privacy-agree=Concordo com a <a href="/privacy">política de privacidade</a>
 register.asterisk-warning=Os campos marcados com um asterisco (*) não podem ser alterados no futuro.
+register.login=Já tem uma conta?
 register.oauth.google=Registe-se no Google
 register.oauth.facebook=Registe-se no Facebook
 
