--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -72,8 +72,6 @@ subject=Тема
 
 tos=Условия использования
 
-view-profile=Профиль просмотра
-
 # TEMPLATE #
 
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
@@ -122,6 +120,7 @@ login.subtitle=Пожалуйста, войдите, чтобы продолжи
 login.forgot-password=Забыли пароль?
 login.oauth.google=Войти в систему с помощью Google
 login.oauth.facebook=Войти в систему с помощью Facebook
+login.register=У вас нет счета?
 login.js.error=Вход не удался, пожалуйста, проверьте данные для входа, заполните капчу и попробуйте еще раз. Если ваш аккаунт еще не был подтвержден, было отправлено новое подтверждение по электронной почте.
 message.title=Новости
 message.match=Матч! Ты кому-то нравишься! Введите здесь, чтобы отправить сообщение :)
@@ -166,6 +165,7 @@ register.title=Зарегистрироваться
 register.tos-agree=Я согласен с <a href="/tos">Условия использования</a>
 register.privacy-agree=Я согласен с <a href="/privacy">заявлением о защитеданных</a>
 register.asterisk-warning=Поля, отмеченные звездочкой (*), не могут быть изменены в будущем.
+register.login=У вас уже есть аккаунт?
 register.oauth.google=Зарегистрироваться в Google
 register.oauth.facebook=Зарегистрироваться в Facebook
 
