--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -72,8 +72,6 @@ subject=课题
 
 tos=使用条款
 
-view-profile=查看资料
-
 # TEMPLATE #
 
 profile.warning.incomplete=您的用户资料不完整，无法被其他用户看到。
@@ -122,6 +120,7 @@ login.subtitle=请登录后继续。
 login.forgot-password=忘记密码了？
 login.oauth.google=用Google登录
 login.oauth.facebook=用Facebook登录
+login.register=没有账户？
 login.js.error=登录失败，请检查登录数据，填写验证码后再试。如果您的账户还未被验证，我们已经发送了一封新的确认邮件。
 message.title=新闻中心
 message.match=一场比赛！有人喜欢你了！在这里输入信息 :)
@@ -166,6 +165,7 @@ register.title=注册
 register.tos-agree=我同意<a href="/tos">使用条款。
 register.privacy-agree=我同意<a href="/privacy">隐私声明</a>。
 register.asterisk-warning=标有星号(*)的字段今后不能更改。
+register.login=已经有一个帐户？
 register.oauth.google=用Google注册
 register.oauth.facebook=用Facebook注册
 
