--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -5,6 +5,7 @@
 # COMMON #
 
 app.name=Alovoa
+
 error.generic=An error occured. Please try again.
 success.submit.generic=Your request has been successfully submitted.
 error.max-chars.generic=You have reached the maximum number of characters.
@@ -72,8 +73,6 @@ subject=Subject
 
 tos=Terms of Service
 
-view-profile=View Profile
-
 # TEMPLATE #
 
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
@@ -122,6 +121,7 @@ login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
 login.oauth.google=Sign in with Google
 login.oauth.facebook=Sign in with Facebook
+login.register=Don't have an account?
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
 message.title=Messages
@@ -167,6 +167,7 @@ register.title=Register
 register.tos-agree=I agree to the <a href="/tos">Terms of Service</a>
 register.privacy-agree=I agree to the <a href="/privacy">Privacy Policy</a>
 register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the future
+register.login=Already have an account?
 register.oauth.google=Sign up with Google
 register.oauth.facebook=Sign up with Facebook
 
