--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -72,8 +72,6 @@ subject=Asunto
 
 tos=Condiciones de uso
 
-view-profile=Ver perfil
-
 # TEMPLATE #
 
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
@@ -122,6 +120,7 @@ login.subtitle=Por favor, inicie sesión para continuar.
 login.forgot-password=¿Olvidó su contraseña?
 login.oauth.google=Iniciar sesión con Google
 login.oauth.facebook=Iniciar sesión con Facebook
+login.register=¿No tiene una cuenta?
 login.js.error=Falló la entrada, por favor compruebe los datos de entrada, rellene el captcha e inténtelo de nuevo. Se ha enviado un nuevo correo electrónico de confirmación si su cuenta aún no ha sido verificada.
 message.title=Noticias
 message.match=¡Una match! ¡Alguien te quiere de vuelta! Escriba aquí para enviar un mensaje :)
@@ -166,6 +165,7 @@ register.title=Registrarse
 register.tos-agree=Estoy de acuerdo con las <a href="/tos">condiciones de uso</a>
 register.privacy-agree=Estoy de acuerdo con la <a href="/privacy">declaración de protección de datos</a> 
 register.asterisk-warning=Los campos marcados con un asterisco (*) no pueden ser modificados en el futuro.
+register.login=¿Ya tiene una cuenta?
 register.oauth.google=Registrarse en Google
 register.oauth.facebook=Registrarse en Facebook
 
