Added basic email template Optimized sending emails to all users Added language column for User table, emails will be sent according to the user's locale, which is determined by the language dropdown in the footer

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -73,6 +73,8 @@ subject=Subject
 
 tos=Terms of Service
 
+website=Website
+
 # TEMPLATE #
 
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
