--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -72,6 +72,8 @@ subject=Betreff
 
 tos=Nutzungsbedingungen
 
+website=Webseite
+
 # TEMPLATE #
 
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
