--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -72,6 +72,8 @@ subject=Asunto
 
 tos=Condiciones de uso
 
+website=Página web
+
 # TEMPLATE #
 
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
