--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -72,6 +72,8 @@ subject=Sujet
 
 tos=Conditions d'utilisation
 
+website=Site web
+
 # TEMPLATE #
 
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
