--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -72,6 +72,8 @@ subject=Oggetto
 
 tos=Condizioni di utilizzo
 
+website=Sito web
+
 # TEMPLATE #
 
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
