--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -72,6 +72,8 @@ subject=対象者
 
 tos=ご利用条件
 
+website=ウェブサイト
+
 # TEMPLATE #
 
 profile.warning.incomplete=あなたのユーザープロフィールは不完全であり、他のユーザーからは見ることができません。
