--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -72,6 +72,8 @@ subject=Assunto
 
 tos=Termos de utilização
 
+website=Sítio Web
+
 # TEMPLATE #
 
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
