--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -72,6 +72,8 @@ subject=Тема
 
 tos=Условия использования
 
+website=Веб-сайт
+
 # TEMPLATE #
 
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
