Deleting account now takes 24 hours for security reasons

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -86,6 +86,7 @@ profile.warning.no-location=No location found! It will be set automatically when
 
 delete-account.title=Delete account
 delete-account.confirm=I hereby confirm to delete this account permanently.
+delete-account.not-active=Link is not active yet. Please check the instructions we have sent you or send another account deletion request.
 
 donate.title=Donate
 donate.notice-1=Be sure to fill in your account's email address in the message or name area.
@@ -158,6 +159,7 @@ profile.interest.info=Only characters, digits and minus (-) allowed. Must be bet
 profile.audio=Custom audio
 profile.audio.info=Upload a short audio for your visitors. You can upload anything - sound effects, your voice or part of your favourite song! 
 profile.audio.delete=Delete audio?
+profile.delete-account.success=Success! Please check your mailbox and read the instructions carefully.
 
 profile.js.delete-image.confirm=Delete selected image?
 
