--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=Kein Standort gefunden! Dieser wird automatisch gese
 
 delete-account.title=Konto löschen
 delete-account.confirm=Ich bestätige hiermit, mein Konto endgültig zu löschen.
+delete-account.not-active=Link ist noch nicht aktiv. Bitte überprüfe die Anweisungen, die wir Dir gesendet haben, oder sende erneut einen Antrag zur Kontolöschung.
 
 donate.title=Spenden
 donate.notice-1=Achten darauf, die E-Mail-Adresse von deinem Konto im Nachrichten- oder Namensbereich einzutragen.
@@ -156,6 +157,7 @@ profile.interest.info=Nur Zeichen, Ziffern und Minus (-) erlaubt. Muss zwischen 
 profile.audio=Dein Audio
 profile.audio.info=Lade ein kurzes Audio für deine Besucher hoch. Du kannst alles hochladen - Soundeffekte, deine Stimme oder einen Teil deines Lieblingssongs! 
 profile.audio.delete=Audio löschen?
+profile.delete-account.success=Erfolg! Bitte prüfe Deine Mailbox und ließ Dir die Anweisungen sorgfältig durch.
 
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
