--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=¡No se ha encontrado ningún lugar! ¡Esto se estab
 
 delete-account.title=Eliminar la cuenta
 delete-account.confirm=Por la presente confirmo que mi cuenta será eliminada permanentemente.
+delete-account.not-active=El enlace aún no está activo. Por favor, revise las instrucciones que le hemos enviado o vuelva a enviar una solicitud de eliminación de cuenta.
 
 donate.title=Donaciones
 donate.notice-1=Asegúrese de introducir la dirección de correo electrónico de su cuenta en el área de mensajes o nombres.
@@ -156,6 +157,7 @@ profile.interest.info=Sólo se permiten caracteres, dígitos y menos (-). Debe t
 profile.audio=Audio personalizado
 profile.audio.info=Sube un audio corto para tus visitantes. Puedes subir cualquier cosa: efectos de sonido, tu voz o parte de tu canción favorita.
 profile.audio.delete=¿Borrar el audio?
+profile.delete-account.success=¡Éxito! Por favor, compruebe su buzón y lea atentamente las instrucciones.
 
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
