--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=Aucun emplacement trouvé ! Cette option sera automa
 
 delete-account.title=Supprimer le compte
 delete-account.confirm=Je confirme par la présente que mon compte sera définitivement supprimé.
+delete-account.not-active=Le lien n'est pas encore actif. Veuillez revoir les instructions que nous vous avons envoyées ou soumettre à nouveau une demande de suppression de compte.
 
 donate.title=Dons
 donate.notice-1=Veillez à saisir l'adresse électronique de votre compte dans la zone de message ou de nom.
@@ -122,7 +123,7 @@ login.subtitle=Veuillez vous connecter pour continuer.
 login.forgot-password=Vous avez oublié votre mot de passe?
 login.oauth.google=Connectez-vous avec Google
 login.oauth.facebook=Connectez-vous avec Facebook
-login.register=Vous n'avez pas de compte ?
+login.register=Vous n'avez pas de compte?
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
 message.match=Un match! Quelqu'un vous aime en retour ! Tapez ici pour envoyer un message :)
@@ -155,9 +156,10 @@ profile.account.delete=Supprimer le compte
 profile.interest.info=Seuls les caractères, les chiffres et le moins (-) sont autorisés. Doit comporter entre 3 et 30 caractères. Maximum 5 intérêts.
 profile.audio=Audio personnalisé
 profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée ! 
-profile.audio.delete=Effacer l'audio ?
+profile.audio.delete=Effacer l'audio?
+profile.delete-account.success=Succès ! Veuillez vérifier votre boîte aux lettres et lire attentivement les instructions.
 
-profile.js.delete-image.confirm=Supprimer l'image sélectionnée ?
+profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
 register.title=S'inscrire
 #register.warning=password-change.warning
@@ -181,7 +183,7 @@ search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atte
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
 search.js.error.no-location=La position n'a pas pu être déterminée. Assurez-vous que votre GPS est allumé.
 
-userprofile.report.confirm=Signaler les utilisateurs pour violation des <a href="/tos">conditions d'utilisation</a> ?
+userprofile.report.confirm=Signaler les utilisateurs pour violation des <a href="/tos">conditions d'utilisation</a>?
 userprofile.num-blocks=# Blocs par utilisateur
 userprofile.num-reports=# Rapports par utilisateur
 userprofile.js.block-user=Bloquer les utilisateurs?
@@ -193,7 +195,7 @@ faq.privacy.question=Mes données sont-elles vraiment privées?
 faq.privacy.answer=Oui, vos données ne seront pas transmises à des tiers.
 faq.encryption.question=Comment mes données sont-elles cryptées?
 faq.encryption.answer=Le cryptage selon la norme AES est utilisé.
-faq.open-source.question=Que signifie "open source" ? Pourquoi ce projet est-il open-source?
+faq.open-source.question=Que signifie "open source"? Pourquoi ce projet est-il open-source?
 faq.open-source.answer=Le terme "open source" signifie essentiellement que tout le monde peut voir comment une partie du logiciel a été créée, ajouter des modifications à qui que ce soit et aider au débogage. Nous pensons que l'open source est l'avenir de toutes les technologies.
 faq.safari.question=J'utilise le navigateur Safari et quelque chose ne fonctionne pas!
 faq.safari.answer=En raison de la nature limitée du navigateur Safari, il n'est pas officiellement pris en charge. Si vous travaillez sous MacOS, nous vous recommandons d'utiliser Firefox. Safari ne prend pas en charge les notifications "web push" sur aucune plate-forme, veuillez demander cette fonctionnalité <a href="https://developer.apple.com/bug-reporting/">ici</a>.
