--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=Nessuna posizione trovata! Questo verrà impostato a
 
 delete-account.title=Cancellare il conto
 delete-account.confirm=Con la presente confermo che il mio account verrà definitivamente cancellato.
+delete-account.not-active=Il link non è ancora attivo. La preghiamo di rivedere le istruzioni che le abbiamo inviato o di ripresentare una richiesta di cancellazione dell'account.
 
 donate.title=Donazioni
 donate.notice-1=Assicurati di inserire l'indirizzo email del tuo account nell'area messaggi o nome.
@@ -156,6 +157,7 @@ profile.interest.info=Sono ammessi solo caratteri, cifre e meno (-). Deve avere 
 profile.audio=Audio personalizzato
 profile.audio.info=Carica un breve audio per i tuoi visitatori. Potete caricare qualsiasi cosa - effetti sonori, la vostra voce o parte della vostra canzone preferita!
 profile.audio.delete=Eliminare l'audio?
+profile.delete-account.success=Successo! Controlla la tua casella di posta e leggi attentamente le istruzioni.
 
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
