--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=場所は見つかりませんでした 他のユー
 
 delete-account.title=アカウントの削除
 delete-account.confirm=私はここに私のアカウントが永久に削除されることを確認します。
+delete-account.not-active=リンクはまだ有効ではありません。お送りした手順をご確認いただくか、アカウント削除のリクエストを再送信してください。
 
 donate.title=寄付金
 donate.notice-1=メッセージまたは名前の欄には、必ずアカウントからのメールアドレスを入力してください。
@@ -156,6 +157,7 @@ profile.interest.info=文字、数字、マイナス（-）のみ使用可能で
 profile.audio=カスタムオーディオ
 profile.audio.info=あなたの訪問者のための短いオーディオをアップロードします。あなたは何をアップロードすることができます - 効果音、あなたの声やお気に入りの曲の一部を
 profile.audio.delete=オーディオを削除する？
+profile.delete-account.success=成功! メールボックスをご確認の上、説明をよくお読みください。
 
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
