--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -82,8 +82,10 @@ profile.warning.no-description=설명이 없습니다!
 profile.warning.no-dating-preference=선호하는 데이트가 없습니다!
 profile.warning.no-gender-preference=선호하는 성별이 없습니다!
 profile.warning.no-location=위치를 찾을 수 없습니다! 다른 사용자를 찾을 때 자동으로 설정됩니다!
+
 delete-account.title=계정 삭제
 delete-account.confirm=본인은 내 계정을 영구적으로 삭제할 것임을 확인합니다.
+delete-account.not-active=링크가 아직 활성화되지 않았습니다. 보내 드린 지침을 확인하거나 계정 삭제 요청을 다시 제출하십시오. 
 
 donate.title=기부하다
 donate.notice-1=메시지 또는 이름 영역에 계정의 이메일 주소를 입력해야합니다.
@@ -155,6 +157,7 @@ profile.interest.info=문자, 숫자 및 마이너스 (-) 만 허용됩니다. 3
 profile.audio=커스텀 오디오
 profile.audio.info=방문자를 위해 짧은 오디오를 업로드하십시오. 음향 효과, 음성 또는 좋아하는 노래의 일부 등 무엇이든 업로드 할 수 있습니다!
 profile.audio.delete=오디오를 삭제 하시겠습니까?
+profile.delete-account.success=성공! 우편함을 확인하고 지침을주의 깊게 읽으십시오. 
 
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
