--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -85,6 +85,7 @@ profile.warning.no-location=Местонахождение не найдено! 
 
 delete-account.title=Удалить учетную запись
 delete-account.confirm=Настоящим я подтверждаю, что моя учетная запись будет удалена навсегда.
+delete-account.not-active=Ссылка еще не активна. Пожалуйста, ознакомьтесь с инструкциями, которые мы вам отправили, или повторно отправьте запрос на удаление учетной записи.
 
 donate.title=Пожертвования
 donate.notice-1=Обязательно введите адрес электронной почты из своего аккаунта в области сообщений или имен.
@@ -156,6 +157,7 @@ profile.interest.info=Допускаются только символы, циф
 profile.audio=Индивидуальный звук
 profile.audio.info=Загрузите короткий звук для ваших посетителей. Вы можете загрузить все, что угодно - звуковые эффекты, голос или часть любимой песни!
 profile.audio.delete=Удалить аудио?
+profile.delete-account.success=Успех! Пожалуйста, проверьте свой почтовый ящик и внимательно прочитайте инструкции.
 
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
