--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -127,7 +127,7 @@ login.register=Noch kein Konto?
 login.js.error=Anmeldung fehlgeschlagen, bitte überprüfe die Anmeldedaten, fülle das Captcha aus und versuche es erneut. Eine neue Bestätigungs-E-Mail wurde versendet, falls dein Konto noch nicht verifiziert wurde.
 message.title=Nachrichten
 message.match=Ein Match! Jemand mag dich zurück! Tippe hier, um eine Nachricht zu senden :)
-message.video-chat=Es wurde ein Video-Chat von Ihrem Chat-Partner angefordert!
+message.video-chat=Es wurde ein Video-Chat angefordert!
 message.js.error.max-length=Maximale Anzahl von Zeichen erreicht.
 message.js.video.confirm=Chatpartner zum Video-Chat einladen?
 
