--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -127,7 +127,7 @@ login.register=계정이 없으십니까?
 login.js.error=로그인에 실패했습니다. 로그인 세부 정보를 확인하고 보안 문자를 입력 한 후 다시 시도하십시오. 계정이 아직 확인되지 않은 경우 새 확인 이메일이 전송되었습니다.
 message.title=뉴스
 message.match=경기! 누군가 당신을 좋아합니다! 메시지를 보내려면 여기를 누르세요 :)
-message.video-chat=채팅 파트너로부터 영상 채팅을 요청했습니다!
+message.video-chat=영상 채팅이 요청되었습니다! 
 message.js.error.max-length=최대 문자 수에 도달했습니다.
 message.js.video.confirm=채팅 파트너를 영상 채팅에 초대 하시겠습니까?
 
