--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -127,7 +127,7 @@ login.register=У вас нет счета?
 login.js.error=Вход не удался, пожалуйста, проверьте данные для входа, заполните капчу и попробуйте еще раз. Если ваш аккаунт еще не был подтвержден, было отправлено новое подтверждение по электронной почте.
 message.title=Новости
 message.match=Матч! Ты кому-то нравишься! Введите здесь, чтобы отправить сообщение :)
-message.video-chat=Видеочат запрошен у вашего чата-партнера!
+message.video-chat=Запрошен видеочат!
 message.js.error.max-length=Максимальное количество достигнутых символов.
 message.js.video.confirm=Пригласить в чат партнера по видеочату?
 
