--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -127,7 +127,7 @@ login.register=没有账户？
 login.js.error=登录失败，请检查登录数据，填写验证码后再试。如果您的账户还未被验证，我们已经发送了一封新的确认邮件。
 message.title=新闻中心
 message.match=一场比赛！有人喜欢你了！在这里输入信息 :)
-message.video-chat=已向您的聊天伙伴请求视频聊天!
+message.video-chat=有人要求视频聊天!
 message.js.error.max-length=达到的最大字符数。
 message.js.video.confirm=邀请聊天伙伴进行视频聊天？
 
