--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -127,7 +127,7 @@ login.register=Vous n'avez pas de compte?
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
 message.match=Un match! Quelqu'un vous aime en retour ! Tapez ici pour envoyer un message :)
-message.video-chat=Un chat vidéo a été demandé à votre partenaire de chat!
+message.video-chat=Un chat vidéo a été demandé!
 message.js.error.max-length=Nombre maximum de caractères atteint.
 message.js.video.confirm=Inviter un partenaire de chat à un chat vidéo?
 
