--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -127,7 +127,7 @@ login.register=アカウントをお持ちでない方
 login.js.error=ログインに失敗しました、ログインデータをご確認の上、キャプチャをご記入の上、再度お試しください。アカウントがまだ確認されていない場合は、新しい確認メールが送信されています。
 message.title=ニュース
 message.match=マッチ！好きな人が戻ってきた！メッセージを送信するにはここを入力してください :)
-message.video-chat=あなたのチャットパートナーからビデオチャットが要求されました!
+message.video-chat=ビデオチャットがリクエストされました。
 message.js.error.max-length=最大文字数に到達しました。
 message.js.video.confirm=チャット相手をビデオチャットに招待する？
 
